# mcp-client

./: client1.py  client2.py  insight-builder.py  insight-builder2.py  pyproject.toml
