[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.7",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
